--- a/passwordgenerator.html
+++ b/passwordgenerator.html
@@ -7,6 +7,8 @@
 		<link rel="stylesheet" type="text/css" href="passwordgenerator.css">
 	</head>
 	<body>
-
+		<div class="container">
+			<h1>Generate a Random Password</h1>
+		</div>
 	</body>
 </html>
