--- a/passwordgenerator.html
+++ b/passwordgenerator.html
@@ -13,7 +13,7 @@
 				<input type="text" id="password" placeholder="Password">
 				<img src="images/copy.png">
 			</div>
-			<button><img src="images/generate.png">Generate Password</button>
+			<button onclick="createPassword()"><img src="images/generate.png">Generate Password</button>
 		</div>
 
 		<script>
@@ -25,12 +25,19 @@
 			const number = "0123456789";
 			const symbol = "@#$%^&*()_+~|}{[]></-=";
 
-			function createPassword {
+			const allChars = upperCase + lowerCase + number + symbol; 
+
+			function createPassword() {
 				let password = "";
 				password += upperCase[Math.floor(Math.random() * upperCase.length)];
 				password += lowerCase[Math.floor(Math.random() * lowerCase.length)];
 				password += number[Math.floor(Math.random() * number.length)];
 				password += symbol[Math.floor(Math.random() * symbol.length)];
+
+				while(length > password.length) {
+					password += allChars[Math.floor(Math.random() * allChars.length)];
+				}
+				passwordBox.value = password;
 			}
 
 		</script>
