fixed the lenght variable

--- a/passwordgenerator.html
+++ b/passwordgenerator.html
@@ -18,7 +18,7 @@
 
 		<script>
 			const passwordBox = document.getElementById("password");
-			const length = 12;
+			const lenght = 12;
 
 			const upperCase = "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
 			const lowerCase = "abcdefghijklmnopqrstuvwxyz";
@@ -34,7 +34,7 @@
 				password += number[Math.floor(Math.random() * number.length)];
 				password += symbol[Math.floor(Math.random() * symbol.length)];
 
-				while(length > password.length) {
+				while(lenght > password.length) {
 					password += allChars[Math.floor(Math.random() * allChars.length)];
 				}
 				passwordBox.value = password;
